@@ -1,9 +1,10 @@
 import java.io.*;
 import java.util.Comparator;
 import java.util.LinkedList;
-import java.util.stream.Collectors;
+import java.util.List;
 
 public class ProductList {
+    public final int ratingThreshold = 3;
     int counter = 0;
     String pathListTxt = "src/productList.txt";
     File productListTxt = new File(pathListTxt);
@@ -50,24 +51,20 @@ public class ProductList {
     }
     public void compareProducts(){
         readerForProductList();
-        for (ShopProduct product : productLinkedList)
-            System.out.println(product.toString());
-        System.out.println("\n\n");
 
         productLinkedList.sort(Comparator.comparing(ShopProduct::getPrice).thenComparing(ShopProduct::getRating));
 
         for (ShopProduct product : productLinkedList)
             System.out.println(product.toString());
 
-        LinkedList<String> endList = (LinkedList<String>) productLinkedList.stream()
-                .filter(shopProduct -> shopProduct.getRating() > shopProduct.ratingThreshold)
+        List<String> endList = productLinkedList.stream()
+                .filter(shopProduct -> shopProduct.getRating() > ratingThreshold)
                 .map(ShopProduct :: toString)
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("\n");
         endList.forEach(System.out::println);
         System.out.println("\n");
-        productLinkedList.forEach(System.out::println);
     }
 
 }
